# supermarket-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
scripts/: smoke.py
supermarket_mcp/: __init__.py  flaresolverr.py  helpers.py  server.py
supermarket_mcp/stores/: __init__.py  _cookie_reuse.py  _flaresolverr_store.py  _storefront.py  aldi.py  base.py  dunnes.py  lidl.py  mrprice.py  supervalu.py  tesco.py
tests/: conftest.py  test_aldi.py  test_cookie_reuse.py  test_dunnes.py  test_flaresolverr_store.py  test_lidl.py  test_mrprice.py  test_server.py  test_storefront.py  test_supervalu.py  test_tesco.py
